<resources>
    <string name="app_name">Bill Please</string>
    <string name="amount">Amount</string>
    <string name="pax">Num of Pax</string>
    <string name="svs">NO SVS</string>
    <string name="gst">GST</string>
    <string name="discount">Discount (%)</string>
    <string name="cash">Cash</string>
    <string name="paynow">PayNow</string>
    <string name="split">SPLIT</string>
    <string name="reset">RESET</string>
</resources>